--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-right: 160px;
+  margin-right: 150px;
 }
 .main-nav .nav-bar .now {
   display: flex;
@@ -100,7 +100,9 @@ body {
 }
 .main-nav .nav-bar img {
   padding-left: 85px;
-  width: 22%;
+  width: 23%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .main-nav a {
   text-decoration: none;
@@ -197,7 +199,7 @@ body {
   border-right: 6px solid #742296;
   border-bottom: 3px solid #742296;
   border-top: 3px solid #742296;
-  margin-left: 37px;
+  margin-left: 25px;
 }
 .banner img {
   width: 182px;
@@ -265,7 +267,7 @@ body {
   display: flex;
 }
 .about .container .gallery img {
-  height: 46vh;
+  height: 45.5vh;
 }
 .about .container .gallery .natural {
   margin-top: 86px;
@@ -294,19 +296,20 @@ body {
 }
 .about .container .gun {
   padding-left: 38px;
+  margin-bottom: 25px;
 }
-.about .container .gun .nato {
-  height: 58.3vh;
-  width: 395.2px;
+.about .container .gun #video {
+  width: 450px;
+  height: 360px;
 }
-.about .container .gun .nato:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+.about .container .gun .warch {
+  -o-object-fit: contain;
+     object-fit: contain;
+  overflow: clip;
+}
+.about .container .gun .warch #nato {
+  height: 56.6vh;
+  width: 550.2px;
 }
 .about .container .gun p {
   padding-top: 15px;
@@ -489,8 +492,8 @@ body {
   background-size: cover;
   -o-object-fit: contain;
      object-fit: contain;
-  width: 407px;
-  height: 56vh;
+  width: 392px;
+  height: 55vh;
 }
 .main .get .kim2 .late {
   -o-object-fit: contain;
@@ -508,8 +511,8 @@ body {
   background-image: url("images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 407px;
-  height: 56vh;
+  width: 392px;
+  height: 55vh;
 }
 .main .get .kim1 .visa {
   -o-object-fit: contain;
@@ -557,6 +560,8 @@ body {
   width: 12%;
   height: 47vh;
   padding: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .instagram .name {
   margin-top: 60px;
@@ -568,6 +573,7 @@ body {
   align-items: center;
 }
 .instagram .kill p {
+  padding-top: 24px;
   font-size: 17px;
   font-family: "JosefinSans-Regular";
   font-weight: bolder;
@@ -648,10 +654,10 @@ body {
   }
   .main-nav img {
     width: 22%;
-    margin-left: 10px;
+    margin-left: 27px;
   }
   .main-nav .nav-bar {
-    margin-right: 114px;
+    margin-right: 98px;
   }
   .main-nav .nav-bar img {
     padding-left: 91px;
@@ -746,7 +752,7 @@ body {
     font-weight: 100;
   }
   .about {
-    padding: 100px 65px;
+    padding: 100px 74px;
   }
   .about .container {
     display: flex;
@@ -775,11 +781,9 @@ body {
   .about .container .gun {
     padding-left: 52px;
   }
-  .about .container .gun .nato {
-    height: 20vh;
-    -o-object-fit: cover;
-       object-fit: cover;
-    width: 325px;
+  .about .container .gun #video {
+    width: 380px;
+    height: 264.9px;
   }
   .about .container .gun p {
     padding-top: 13px;
@@ -835,7 +839,7 @@ body {
     -o-object-fit: contain;
        object-fit: contain;
     width: 22%;
-    height: 2vh;
+    height: 2.34vh;
     opacity: 70%;
     margin-right: 0px;
   }
@@ -850,8 +854,6 @@ body {
     padding: 0px;
   }
   .services .super li:first-child {
-    -webkit-text-decoration: underline 2px solid white;
-            text-decoration: underline 2px solid white;
     font-size: 17px;
   }
   .services .foni {
@@ -886,21 +888,21 @@ body {
     margin: -14px 0px 0 67px;
   }
   .main .get .kim1 {
-    width: 115%;
-    height: 24vh;
+    width: 104%;
+    height: 22vh;
   }
   .main .get .kim2 {
-    width: 115%;
-    height: 24vh;
+    width: 99%;
+    height: 21vh;
   }
   .main .get .kim1 .visa {
-    width: 9.3%;
-    height: 3vh;
+    width: 8.8%;
+    height: 2vh;
     margin-left: 20PX;
   }
   .main .get .kim2 .late {
-    width: 11.3%;
-    height: 3vh;
+    width: 8%;
+    height: 2vh;
     margin-left: 20PX;
   }
   .main h2 {
@@ -957,6 +959,13 @@ body {
     font-size: 20px;
     padding-right: 18px;
   }
+  .about .container .gun video {
+    -o-object-fit: contain;
+    object-fit: contain;
+    overflow: clip;
+    height: 19.6vh;
+    width: 353.2px;
+  }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   .main-nav {
@@ -965,7 +974,7 @@ body {
   .main-nav img {
     width: 21%;
     align-self: center;
-    margin-left: 5px;
+    margin-left: 12px;
   }
   .main-nav .nav-bar {
     margin-right: 160px;
@@ -976,14 +985,14 @@ body {
   }
   .main-nav .nav-bar img {
     padding-left: 58px;
-    width: 28%;
+    width: 24%;
   }
   .main-nav a {
     font-size: 15px;
     color: #000;
   }
   .main-nav .nav-bar {
-    margin-right: 64px;
+    margin-right: 50px;
   }
   .banner {
     padding: 5px 0px 30px 47px;
@@ -992,29 +1001,27 @@ body {
     top: 60px;
   }
   .banner img {
-    width: 100px;
-    height: 29vh;
-    padding-right: 13px;
+    width: 105px;
+    height: 25vh;
+    padding-right: 10px;
   }
   .banner .image-life .pic1, .banner .image-life .pic3 {
-    margin-top: 56px;
+    margin-top: 36px;
   }
   .banner .text h1 {
-    font-size: 25px;
-    font-family: "JosefinSans-Regular";
-    color: #000;
-    font-weight: 700;
-    margin-top: 10px;
-    line-height: 36px;
+    font-size: 24px;
+    margin-top: 0px;
+    line-height: 29px;
+    margin-bottom: 5px;
   }
   .banner .text p {
-    font-size: 14px;
+    font-size: 13px;
     font-family: "JosefinSans-Regular";
     font-weight: 400;
     line-height: 1.4;
     padding-top: 0px;
-    padding-bottom: 10px;
-    line-height: 25px;
+    padding-bottom: 7px;
+    line-height: 19px;
     margin-bottom: 4px;
   }
   .banner .text .dis {
@@ -1022,8 +1029,8 @@ body {
     color: white;
     text-decoration: none;
     font-family: "JosefinSans-Regular";
-    font-size: 11px;
-    padding: 11px 18px;
+    font-size: 10px;
+    padding: 9px 14px;
   }
   .banner .text .kok {
     background-color: white;
@@ -1031,35 +1038,37 @@ body {
     text-decoration: none;
     font-family: "JosefinSans-Regular";
     font-weight: bold;
-    font-size: 11px;
-    padding: 8px 5px;
+    font-size: 10px;
+    padding: 6px 5px;
     border-left: 6px solid #742296;
     border-right: 6px solid #742296;
     border-bottom: 3px solid #742296;
     border-top: 3px solid #742296;
-    margin-left: 22px;
+    margin-left: 8px;
   }
   .banner .fill p:first-of-type {
-    margin: 10px 0 0 0;
+    margin: 5px 0 0 0;
     color: #742296;
     font-family: "JosefinSans-Regular";
     line-height: 17px;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 10px;
     display: flex;
     align-items: center;
   }
   .banner .fill p:last-of-type {
     margin: 5px 0 0 0;
-    color: #000;
-    font-family: "JosefinSans-Regular";
     font-size: 11px;
     line-height: 10px;
     display: flex;
     align-items: end;
   }
+  .banner .fill i {
+    font-size: 17px;
+    font-weight: 100;
+  }
   .about {
-    padding: 74px 47px;
+    padding: 34px 47px;
   }
   .about h2 {
     font-size: 24px;
@@ -1069,7 +1078,7 @@ body {
     height: 17vh;
   }
   .about .container .gallery .natural {
-    margin-top: 86px;
+    margin-top: 56px;
   }
   .about .container .gala {
     margin-bottom: 17px;
@@ -1081,18 +1090,21 @@ body {
   .about .container .hi .deep {
     height: 4vh;
   }
-  .about .container .gun .nato {
-    height: 26.3vh;
-    width: 296.2px;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
   .about .container p {
     font-size: 11px;
     margin-bottom: 13px;
+    padding-top: 1px;
   }
   .about .container .gallery img {
-    height: 18vh;
+    height: 19.3vh;
+  }
+  .about .container .gun {
+    padding-left: 14px;
+    margin-bottom: 25px;
+  }
+  .about .container .gun #video {
+    width: 290px;
+    height: 233px;
   }
   p {
     padding-top: 15px;
@@ -1192,20 +1204,21 @@ body {
     margin-bottom: 33px;
   }
   .main .get .kim1 {
-    width: 320px;
-    height: 25vh;
+    width: 278px;
+    height: 22vh;
   }
   .main .get .name {
-    margin: -5px 0px 0 9px;
+    margin: -11px 0px 0 9px;
   }
   .main .get .kim2 {
-    width: 320px;
-    height: 25vh;
+    width: 256px;
+    height: 22vh;
   }
   .main .get p {
-    font-size: 16px;
+    font-size: 11px;
     font-weight: 550;
     margin: 0px 0;
+    line-height: 17px;
   }
   .main h2 {
     margin-left: -20px;
@@ -1218,9 +1231,14 @@ body {
     font-family: "JosefinSans-Regular";
     font-weight: 500;
     margin: -5px 0;
+    padding-top: 5px;
   }
   .isdo .for3 p:last-of-type {
     font-size: 11px;
+  }
+  .main .get h3 {
+    font-size: 20px;
+    margin: 10px 0;
   }
   .isdo .line4 {
     background-color: #f1f1f1;
@@ -1251,7 +1269,7 @@ body {
   }
   .main .get .kim2 .late {
     width: 10%;
-    height: 3vh;
+    height: 2.5vh;
     margin-left: 20PX;
   }
   .instagram {
@@ -1264,13 +1282,14 @@ body {
     padding: 30px;
   }
   .instagram .demo img {
-    width: 18%;
-    height: 23vh;
-    padding: 5px;
+    width: 14%;
+    height: 20vh;
+    padding: 3px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .instagram .name {
-    margin-top: 60px;
-    height: 63vh;
+    margin-top: 32px;
   }
   .instagram .kill p {
     font-size: 14px;
@@ -1398,10 +1417,10 @@ body {
   }
   .banner .image-life {
     display: flex;
-    padding-top: 53px;
+    padding-top: 42px;
   }
   .banner .image-life .pic1 {
-    margin-top: 30px;
+    margin-top: 0px;
   }
   .banner .image-life .pic3 {
     display: none;
@@ -1430,21 +1449,18 @@ body {
     font-weight: 100;
   }
   .banner .text h1 {
-    font-size: 32px;
-    font-family: "JosefinSans-Regular";
-    color: #000;
-    font-weight: 700;
+    font-size: 28px;
     margin-top: 0px;
-    line-height: 37px;
+    line-height: 32px;
   }
   .banner .text p {
-    font-size: 14px;
+    font-size: 17px;
     font-family: "JosefinSans-Regular";
     font-weight: 400;
     line-height: 1.4;
     padding-top: 6px;
     padding-bottom: 10px;
-    line-height: 23px;
+    line-height: 21px;
     margin-bottom: 6px;
   }
   .banner .text .kok {
@@ -1454,12 +1470,8 @@ body {
     font-family: "JosefinSans-Regular";
     font-weight: bold;
     font-size: 13px;
-    padding: 8px 5px;
-    border-left: 6px solid #742296;
-    border-right: 6px solid #742296;
-    border-bottom: 3px solid #742296;
-    border-top: 3px solid #742296;
-    margin-left: 15px;
+    padding: 7px 4px;
+    margin-left: 10px;
   }
   .banner .text .dis {
     background-color: #742296;
@@ -1467,7 +1479,7 @@ body {
     text-decoration: none;
     font-family: "JosefinSans-Regular";
     font-size: 12px;
-    padding: 11px 18px;
+    padding: 10px 16px;
   }
   .banner .fill p:last-of-type {
     margin: 5px 0 0 0;
@@ -1482,18 +1494,21 @@ body {
     margin: 5px 0 0 0;
     color: #000;
     font-family: "JosefinSans-Regular";
-    font-size: 12px;
+    font-size: 14px;
     line-height: 10px;
     display: flex;
-    align-items: end;
+    align-items: baseline;
+  }
+  .banner .text .fill p:first-of-type {
+    margin: 23px 0 0 0;
+    font-size: 16px;
   }
   .about {
-    padding: 10px 12px;
+    padding: 10px 27px;
   }
   .about h2 {
     font-size: 20px;
     padding-bottom: 8px;
-    text-align: center;
     margin-left: 2px;
   }
   .about .container {
@@ -1518,15 +1533,7 @@ body {
   .about .container p {
     font-size: 12px;
     margin-bottom: 17px;
-  }
-  .about .container .hi {
-    height: 45vh;
-    width: 78%;
-    display: flex;
-  }
-  .about .container .hi .deep {
-    height: 4vh;
-    margin-left: 15px;
+    line-height: 18px;
   }
   .about .container .rong {
     margin-left: 0px;
@@ -1534,8 +1541,9 @@ body {
   .about .container .gun {
     padding-left: 0px;
   }
-  .about .container .gun .nato {
-    height: 41vh;
+  .about .container .gun #video {
+    width: 320px;
+    height: 300px;
   }
   .about .container .gun p {
     padding-top: 12px;
@@ -1552,20 +1560,19 @@ body {
     width: 317.2px;
   }
   .main {
-    padding: 60px 65px 0 22px;
+    padding: 60px 65px 0 27px;
   }
   .main h2 {
     font-size: 20px;
-    text-align: center;
     margin-bottom: 0;
-    margin-left: 44px;
+    margin-left: 0px;
   }
   .main .get {
     display: flex;
     flex-direction: column;
   }
   .main .get .very {
-    margin: 53px 40px 0 0px;
+    margin: 30px 40px 0 0px;
   }
   .main .get .name {
     margin: -14px 0px 0 40px;
@@ -1576,11 +1583,6 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: end;
-    background-image: url("images/WhatsApp Image 2024-05-02 at 07.24.17 (1).jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    -o-object-fit: contain;
-       object-fit: contain;
     width: 322px;
     height: 40vh;
   }
@@ -1597,9 +1599,6 @@ body {
     -o-object-fit: contain;
        object-fit: contain;
     align-items: end;
-    background-image: url("/images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
     width: 322px;
     height: 40vh;
   }
@@ -1611,11 +1610,11 @@ body {
     margin-left: 20PX;
   }
   .main .get p:first-of-type {
-    margin: 15px 0;
+    margin: 10px 0;
   }
   .main .get p {
     font-size: 12px;
-    margin: 15px 0;
+    margin: 10px 0;
   }
   .main .get h3 {
     font-size: 20px;
@@ -1624,13 +1623,19 @@ body {
   .main .get .name h3, .main .get .name p {
     margin-left: -38px;
   }
+  .about .container .gun video {
+    -o-object-fit: contain;
+    object-fit: contain;
+    height: 41.6vh;
+    width: 320.2px;
+  }
   .services {
-    padding: 40px 0px;
+    padding: 40px 27px;
   }
   .services h2 {
-    font-size: 15px;
+    font-size: 20px;
     padding-bottom: 15px;
-    text-align: center;
+    width: 252px;
   }
   .services .fill {
     display: flex;
@@ -1713,7 +1718,7 @@ body {
     margin-bottom: 11px;
   }
   .isdo {
-    padding: 20px 0px 20px 14px;
+    padding: 20px 0px 20px 24px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -1792,16 +1797,17 @@ body {
   .instagram .demo {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     padding: 15px;
   }
   .instagram .demo img {
-    width: 100%;
-    height: 27vh;
+    width: 95px;
+    height: 33vh;
     padding: 3px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
-  .instagram .name {
-    margin-top: 13px;
-    height: 63vh;
+  .instagram .demo .name {
     display: none;
   }
   .instagram .kill p {
@@ -1869,9 +1875,9 @@ body {
   .about .container .gun {
     margin-left: 40px;
   }
-  .about .container .gun .nato {
-    height: 49.3vh;
-    width: 467.2px;
+  .about .container .gun #video {
+    width: 520px;
+    height: 405px;
   }
   .about .container .gallery img {
     height: 40vh;
@@ -1884,6 +1890,9 @@ body {
   }
   .rong {
     margin-left: 35px;
+  }
+  .about {
+    padding: 70px 65px;
   }
   .about .container .hi {
     position: absolute;
@@ -1984,12 +1993,26 @@ body {
     margin-bottom: 9px;
   }
   .main .get .kim1 {
-    width: 515px;
-    height: 56vh;
+    width: 421px;
+    height: 45vh;
   }
   .main .get .kim2 {
-    width: 515px;
-    height: 56vh;
+    width: 421px;
+    height: 45vh;
+  }
+  .main .get .kim2 .late {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 9.3%;
+    height: 4.8vh;
+    margin-left: 20PX;
+  }
+  .main .get .kim1 .visa {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 9.3%;
+    height: 4.9vh;
+    margin-left: 20PX;
   }
   .instagram .demo img {
     width: 12%;
