--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ body {
         display: flex;
         justify-content: space-around;
         align-items: center;
-        margin-right:160px;
+        margin-right:150px;
 
         .now{
             display: flex;
@@ -143,7 +143,8 @@ body {
 
         img{
             padding-left: 85px;
-            width: 22%;
+            width: 23%;
+            object-fit: contain;
         }
     }
 
@@ -271,7 +272,7 @@ body {
         border-right: 6px solid #742296;
         border-bottom: 3px solid #742296;
         border-top: 3px solid #742296;
-        margin-left: 37px;
+        margin-left: 25px;
         
     }
 
@@ -377,7 +378,7 @@ h2{
         display: flex;
         
         img{
-            height:46vh;
+            height:45.5vh;
         }
         
         .natural{
@@ -421,23 +422,47 @@ h2{
 
      .gun{
         padding-left: 38px;
+        margin-bottom: 25px;
 
 
-        .nato{
-            height: 58.3vh;
-            width: 395.2px;
+        // #nato{
+
+
+        //     height: 74.6vh;
+        //     width: 390.2px;
            
-         }
+        //  }
 
-         .nato:before {
-
-            content: "";
-            position: absolute;
-            left: 0; right: 0;
-            top: 0; bottom: 0;
-            background: rgba(0,0,0,.5);
-
+        #video {
+            width:450px; 
+            height:360px;
           }
+          
+         .warch {
+            object-fit: contain;
+            overflow: clip;
+
+
+           
+                
+        #nato{
+            height: 56.6vh;
+            width: 550.2px;
+        }
+        }
+
+    
+       
+
+        //  .nato:before {
+
+        //     content: "";
+        //     position: absolute;
+        //     left: 0; right: 0;
+        //     top: 0; bottom: 0;
+        //     background: rgba(0,0,0,.5);
+
+        //   }
 
       p{
         padding-top: 15px ;
@@ -722,8 +747,8 @@ h2{
             background-repeat: no-repeat;
             background-size: cover;
             object-fit: contain;
-            width: 407px;
-            height: 56vh;
+            width: 392px;
+            height: 55vh;
 
             .late{
                 object-fit: contain;
@@ -741,8 +766,8 @@ h2{
             background-image: url("images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
-            width: 407px;
-            height: 56vh;
+            width: 392px;
+            height: 55vh;
 
             .visa{
                 
@@ -813,6 +838,7 @@ p{
             width: 12%;
             height: 47vh;
             padding: 5px;
+            object-fit: cover;
         }
         padding: 30px;
     }
@@ -829,6 +855,7 @@ p{
         align-items: center;
 
         p{
+            padding-top: 24px;
             font-size: 17px;
             font-family: "JosefinSans-Regular";
             font-weight: bolder;
@@ -953,13 +980,13 @@ p{
         img{
 
             width: 22%;
-            margin-left: 10px;
+            margin-left: 27px;
             
         }
     
         .nav-bar{
-           
-           margin-right: 114px;
+                margin-right: 98px;
+            
     
         
             img{
@@ -1117,7 +1144,7 @@ h1{
 
 
 .about{
-    padding: 100px 65px;
+    padding: 100px 74px;
 
 .container{
     display: flex;
@@ -1168,12 +1195,10 @@ h1{
         padding-left: 52px;
 
 
-        .nato{
-            height: 20vh;
-            object-fit: cover;
-            width: 325px;
-           
-         }
+        #video {
+            width:380px; 
+            height:264.9px;
+          }
 
 
       p{
@@ -1273,7 +1298,7 @@ h1{
          img{
             object-fit: contain;
             width: 22%;
-            height: 2vh;
+            height: 2.34vh;
             opacity: 70%;
             margin-right:0px;
          
@@ -1303,7 +1328,6 @@ h1{
       }
 
       li:first-child {
-        text-decoration: underline 2px solid white ;
         font-size: 17px;
       }
 
@@ -1359,28 +1383,25 @@ h1{
 }
 
 .main .get .kim1 {
-  
-    width: 115%;
-    height: 24vh;
+    width: 104%;
+    height: 22vh;
 }
 
 .main .get .kim2 {
-
-    
-    width: 115%;
-    height: 24vh;
+    width: 99%;
+    height: 21vh;
 }
 
 
 .main .get .kim1 .visa {
-    width: 9.3%;
-    height: 3vh;
+    width: 8.8%;
+    height: 2vh;
     margin-left: 20PX;
 }
 
 .main .get .kim2 .late {
-    width: 11.3%;
-    height: 3vh;
+    width: 8%;
+    height: 2vh;
     margin-left: 20PX;
 }
 
@@ -1487,6 +1508,14 @@ h1{
 }
 
 
+.about .container .gun video {
+    -o-object-fit: contain;
+    object-fit: contain;
+    overflow: clip;
+    height: 19.6vh;
+    width: 353.2px;
+}
+
 }
 
 
@@ -1502,7 +1531,7 @@ h1{
     img{
         width: 21%;
         align-self: center;
-        margin-left: 5px;
+        margin-left: 12px;
         
     }
 
@@ -1521,7 +1550,7 @@ h1{
 
         img{
             padding-left: 58px;
-            width: 28%;
+            width: 24%;
         }
     }
 
@@ -1535,7 +1564,7 @@ h1{
 }
 
 .main-nav .nav-bar {
-    margin-right: 64px;
+    margin-right: 50px;
 }
 
 .banner{
@@ -1548,9 +1577,9 @@ h1{
 
 }
     img{
-    width: 100px;
-    height: 29vh;
-    padding-right: 13px;
+    width: 105px;
+    height: 25vh;
+    padding-right: 10px;
     
         
     }
@@ -1559,7 +1588,7 @@ h1{
 
 
         .pic1, .pic3{
-            margin-top: 56px;
+            margin-top: 36px;
         }
       
     }
@@ -1571,35 +1600,33 @@ h1{
 
 // still banner
 .banner .text h1 {
-    font-size: 25px;
-    font-family: "JosefinSans-Regular";
-    color: #000;
-    font-weight: 700;
-    margin-top: 10px;
-    line-height: 36px;
+    font-size: 24px;
+    margin-top: 0px;
+    line-height: 29px;
+    margin-bottom: 5px;
 }
 
 
 .banner .text p {
-    font-size: 14px;
+    font-size: 13px;
     font-family: "JosefinSans-Regular";
     font-weight: 400;
     line-height: 1.4;
     padding-top: 0px;
-    padding-bottom: 10px;
-    line-height: 25px;
+    padding-bottom: 7px;
+    line-height: 19px;
     margin-bottom: 4px;
 }
-
 
 .banner .text .dis {
     background-color: #742296;
     color: white;
     text-decoration: none;
     font-family: "JosefinSans-Regular";
-    font-size: 11px;
-    padding: 11px 18px;
+    font-size: 10px;
+    padding: 9px 14px;
 }
+
 
 .banner .text .kok {
     background-color: white;
@@ -1607,40 +1634,43 @@ h1{
     text-decoration: none;
     font-family: "JosefinSans-Regular";
     font-weight: bold;
-    font-size: 11px;
-    padding: 8px 5px;
+    font-size: 10px;
+    padding: 6px 5px;
     border-left: 6px solid #742296;
     border-right: 6px solid #742296;
     border-bottom: 3px solid #742296;
     border-top: 3px solid #742296;
-    margin-left: 22px;
+    margin-left: 8px;
 }
 
 .banner .fill p:first-of-type {
-    margin: 10px 0 0 0;
+    margin: 5px 0 0 0;
     color: #742296;
     font-family: "JosefinSans-Regular";
     line-height: 17px;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 10px;
     display: flex;
     align-items: center;
 }
 
 .banner .fill p:last-of-type {
     margin: 5px 0 0 0;
-    color: #000;
-    font-family: "JosefinSans-Regular";
     font-size: 11px;
     line-height: 10px;
     display: flex;
     align-items: end;
 }
+
+.banner .fill i {
+    font-size: 17px;
+    font-weight: 100;
+}
 // end
 
 
 .about{
-    padding: 74px 47px;
+    padding: 34px 47px;
     
 
 h2{
@@ -1660,7 +1690,7 @@ h2{
         }
         
         .natural{
-            margin-top: 86px; 
+            margin-top: 56px;
          }
     
     }
@@ -1696,23 +1726,29 @@ h2{
 
 // about 
 
-.about .container .gun .nato {
-    height: 26.3vh;
-    width: 296.2px;
-    object-fit: cover;
-}
+
 
 
 .about .container p {
     font-size: 11px;
     margin-bottom: 13px;
+    padding-top: 1px;
 }
 
 
 .about .container .gallery img {
-    height: 18vh;
+    height: 19.3vh;
 }
 
+.about .container .gun {
+    padding-left: 14px;
+    margin-bottom: 25px;
+}
+
+.about .container .gun #video {
+        width:290px; 
+        height:233px;
+      }
 
 p {
     padding-top: 15px;
@@ -1880,24 +1916,25 @@ p {
 // main
 .main .get .kim1 {
   
-    width: 320px;
-    height: 25vh;
+    width: 278px;
+    height: 22vh;
 }
 
 .main .get .name {
-    margin: -5px 0px 0 9px;
+    margin: -11px 0px 0 9px;
 }
 
 .main .get .kim2 {
 
-    width: 320px;
-    height: 25vh;
+    width: 256px;
+    height: 22vh;
 }
 
 .main .get p {
-    font-size: 16px;
+    font-size: 11px;
     font-weight: 550;
     margin: 0px 0;
+    line-height: 17px;
 }
 
 .main h2 {
@@ -1912,6 +1949,7 @@ p {
     font-family: "JosefinSans-Regular";
     font-weight: 500;
     margin: -5px 0;
+    padding-top: 5px;
 }
 
 
@@ -1919,7 +1957,10 @@ p {
 .isdo .for3 p:last-of-type {
     font-size: 11px;
 }
-
+.main .get h3 {
+    font-size: 20px;
+    margin: 10px 0;
+}
 
 .isdo .line4 {
     background-color: #f1f1f1;
@@ -1955,8 +1996,9 @@ p {
 
 .main .get .kim2 .late{
     width: 10%;
-    height: 3.0vh;
+    height: 2.5vh;
     margin-left: 20PX;
+    
 
 }
 
@@ -1971,18 +2013,20 @@ p {
     
     
     .demo{
+        padding: 30px;
 
         img{
-            width: 18%;
-        height: 23vh;
-        padding: 5px;
+            width: 14%;
+            height: 20vh;
+            padding: 3px;
+            object-fit: cover;
         }
-        padding: 30px;
-    }
+        }
+       
+    
 
     .name{
-        margin-top: 60px;
-        height: 63vh;
+        margin-top: 32px;
     }
 
 
@@ -2181,10 +2225,10 @@ p {
     
         .image-life{
             display: flex;
-            padding-top: 53px;
+            padding-top: 42px;
     
             .pic1 {
-                margin-top: 30px;
+                margin-top: 0px;
             }
 
             .pic3{
@@ -2237,22 +2281,19 @@ p {
 
 // banner
 .banner .text h1 {
-    font-size: 32px;
-    font-family: "JosefinSans-Regular";
-    color: #000;
-    font-weight: 700;
+    font-size: 28px;
     margin-top: 0px;
-    line-height: 37px;
+    line-height: 32px;
 }
 
 .banner .text p {
-    font-size: 14px;
+    font-size: 17px;
     font-family: "JosefinSans-Regular";
     font-weight: 400;
     line-height: 1.4;
     padding-top: 6px;
     padding-bottom: 10px;
-    line-height: 23px;
+    line-height: 21px;
    margin-bottom: 6px;
 }
 
@@ -2263,14 +2304,9 @@ p {
     font-family: "JosefinSans-Regular";
     font-weight: bold;
     font-size: 13px;
-    padding: 8px 5px;
-    border-left: 6px solid #742296;
-    border-right: 6px solid #742296;
-    border-bottom: 3px solid #742296;
-    border-top: 3px solid #742296;
-    margin-left: 15px;
+    padding: 7px 4px;
+    margin-left: 10px;
 }
-
 
 .banner .text .dis {
     background-color: #742296;
@@ -2278,7 +2314,7 @@ p {
     text-decoration: none;
     font-family: "JosefinSans-Regular";
     font-size: 12px;
-    padding: 11px 18px;
+    padding: 10px 16px;
 }
 
 .banner .fill p:last-of-type {
@@ -2295,22 +2331,26 @@ p {
     margin: 5px 0 0 0;
     color: #000;
     font-family: "JosefinSans-Regular";
-    font-size: 12px;
+    font-size: 14px;
     line-height: 10px;
     display: flex;
-    align-items: end;
+    align-items: baseline;
+}
+
+.banner .text .fill p:first-of-type {
+    margin: 23px 0 0 0;
+    font-size: 16px;
 }
 // end
 
     
 .about{
-    padding: 10px 12px;
+    padding: 10px 27px;
     
 
 h2{
     font-size: 20px;
     padding-bottom: 8px;
-    text-align: center;
     margin-left: 2px;
 }
 
@@ -2346,25 +2386,13 @@ h2{
         p{
             font-size: 12px;
             margin-bottom: 17px;
+            line-height: 18px;
          
         }
         
     
 
-    .hi{
-        height: 45vh;
-        width: 78%;
-        display: flex;
-      
-
-
-       
-     .deep{
-        height: 4vh;  
-        margin-left: 15px;
-    }
-
-    }
+   
     .rong{
         margin-left: 0px;
      }
@@ -2372,10 +2400,10 @@ h2{
      .gun{
         padding-left: 0px;
         
-        .nato{
-            height: 41vh;
-           
-         }
+        #video {
+            width:320px; 
+            height:300px;
+          }
 
 
       p{
@@ -2411,13 +2439,12 @@ h2{
 }
 
 .main{
-    padding: 60px 65px 0 22px  ;
+    padding: 60px 65px 0 27px  ;
   
 h2{
     font-size: 20px;
-    text-align: center;
     margin-bottom: 0;
-    margin-left: 44px;
+    margin-left: 0px;
 }
  .get{
      display: flex;
@@ -2426,7 +2453,7 @@ h2{
      
 .very {
 
- margin: 53px 40px 0 0px;
+ margin: 30px 40px 0 0px;
 
  }
 
@@ -2443,10 +2470,6 @@ h2{
          display: flex;
          justify-content: flex-end;
          align-items: end;
-         background-image: url("images/WhatsApp Image 2024-05-02 at 07.24.17 (1).jpeg");
-         background-repeat: no-repeat;
-         background-size: cover;
-         object-fit: contain;
          width: 322px;
          height: 40vh;
      
@@ -2465,9 +2488,6 @@ h2{
          justify-content: flex-end;
          object-fit: contain;
          align-items: end;
-         background-image: url("/images/WhatsApp Image 2024-05-02 at 07.24.13.jpeg");
-         background-repeat: no-repeat;
-         background-size: cover;
          width: 322px;
          height: 40vh;
      
@@ -2485,14 +2505,14 @@ h2{
  p:first-of-type {
 
      
-     margin: 15px 0;
+     margin: 10px 0;
 
  }
 
 p{
 
      font-size: 12px;
-     margin: 15px 0;
+     margin: 10px 0;
 
 }
 
@@ -2518,18 +2538,23 @@ p{
 }
 
 
-
+.about .container .gun video {
+    -o-object-fit: contain;
+    object-fit: contain;
+    height: 41.6vh;
+    width: 320.2px;
+}
 
 
 .services{
-    padding: 40px 0px;
+    padding: 40px 27px;
 
 
  
     h2{
-       font-size: 15px;
+       font-size: 20px;
        padding-bottom: 15px;
-       text-align: center;
+       width: 252px;
     }
 
     .fill{
@@ -2665,7 +2690,7 @@ p{
 
 
 .isdo{
-    padding: 20px 0px  20px 14px;
+    padding: 20px 0px  20px 24px;
 
     
     display: flex;
@@ -2777,20 +2802,24 @@ width: 50%;
   .demo{
       display: flex;
       justify-content: center;
+      flex-wrap: wrap;
+      padding: 15px;
 
 
       img{
-        width: 100%;
-        height: 27vh;
+        width: 95px;
+        height: 33vh;
         padding: 3px;
+        object-fit: cover;
       }
-      padding: 15px;
-  }
 
+ 
+      
   .name{
-      margin-top: 13px;
-      height: 63vh;
-      display: none;
+    display: none;
+   }
+ 
+ 
   }
 
 
@@ -2804,6 +2833,7 @@ width: 50%;
       }
 
   a{
+
       font-size: 7px;
        padding: 7px 12px;
       
@@ -2931,9 +2961,11 @@ width: 50%;
         margin-left: 40px;
     }
 
-    .about .container .gun .nato {
-        height: 49.3vh;
-        width: 467.2px;
+    .about .container .gun #video {
+    
+            width:520px; 
+            height:405px;
+
     }
 
     .about .container .gallery img {
@@ -2950,6 +2982,10 @@ width: 50%;
     .rong {
         margin-left: 35px;
         
+    }
+
+    .about {
+        padding: 70px 65px;
     }
 
     .about .container .hi {
@@ -3076,13 +3112,29 @@ width: 50%;
     // main
 
     .main .get .kim1 {
-        width: 515px;
-        height: 56vh;
+        width: 421px;
+        height: 45vh;
     }
 
     .main .get .kim2 {
-        width: 515px;
-        height: 56vh;
+        width: 421px;
+        height: 45vh;
+    }
+
+    .main .get .kim2 .late {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 9.3%;
+        height: 4.8vh;
+        margin-left: 20PX;
+    }
+
+    .main .get .kim1 .visa{
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 9.3%;
+        height: 4.9vh;
+        margin-left: 20PX;
     }
 
     // end
